added shikshalokamLogo favIcon instead of SDI and fetching the programId and assessmentId by storing them in local storage

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 <nav class="navbar noMarginPadding ">
 
-  <div class="col-sm-6  col-md-6 col-xs-6 col-lg-6 alingCenterline">
+  <div class="col-sm-6  col-md-6 col-xs-6 col-lg-6 alingCenterline noMarginPadding">
 
-    <img src =" ./assets/logo.png" >
-    <mat-card-title class="pageBrand">
+    <img  class="logo" src =" ./assets/shikshalokam.png" >
+    <!-- <mat-card-title class="pageBrand">
       <strong>{{ 'brand' | translate }}</strong>
-    </mat-card-title>
+    </mat-card-title> -->
       </div>
 
   <!-- <div class="col-sm-4 mod ">
