--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -9,6 +9,9 @@
     margin-bottom: 0px;
 
 }
+.logo{
+    height: 50px;
+}
 .apple{
     background-image: linear-gradient(to bottom,#1cdffe 10%,#2462e9 90%);
     height: 80px;
