--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -5,7 +5,8 @@
   </div>
     <!-- <div routerLink = "{{option.anchorLink}}"  [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active"*ngFor="let option of link?.options"  class="subHeading"> -->
     <!-- <div [routerLink]="['assessments/:programId/:assessmentId/'+option.link?.anchorLink,option.link.programId,option.link.assessmentId ]" routerLinkActive="active" *ngFor="let option of link?.options"  class="subHeading"> -->
-        <div [routerLink]="[option.link.anchorLink ]"  [queryParamsHandling]="preserve" [queryParams]="{ programId : option.link.programId , assessmentId : option.link.assessmentId}" routerLinkActive="active" *ngFor="let option of link?.options"  class="subHeading">
+        <!-- <div [routerLink]="[option.link.anchorLink ]"  [queryParamsHandling]="preserve" [queryParams]="{ programId : option.link.programId , assessmentId : option.link.assessmentId}" routerLinkActive="active" *ngFor="let option of link?.options"  class="subHeading"> -->
+            <div [routerLink]="[option.anchorLink ]"  routerLinkActive="active" *ngFor="let option of link?.options"  class="subHeading">
 
       <span class="sideNavSubheading"> 
           {{ option.value | translate }}
