added shikshalokamLogo favIcon instead of SDI and fetching the programId and assessmentId by storing them in local storage

--- a/src/app/modules/report/school-list/school-list.component.html
+++ b/src/app/modules/report/school-list/school-list.component.html
@@ -67,7 +67,7 @@
                  </div>
                </div>
                <div class="flexRight">
-               <div class="active " *ngIf="!(school.isParentInterviewCompleted) ; else complete" [routerLink]="['/report/ecm-report' ,school.name,school._id ]">
+               <div class="active " *ngIf="!(school.isParentInterviewCompleted) ; else complete" [routerLink]="['/assessments/report/ecm-report' ,school.name,school._id ]">
                 {{'tableLabel.buttons.clickHere'| translate}}</div>
                 <ng-template #complete>
                     <div  class="complete">
