--- a/src/app/core/components/program-sidenav/program-sidenav.component.html
+++ b/src/app/core/components/program-sidenav/program-sidenav.component.html
@@ -3,7 +3,7 @@
 </div>
 <div class="subHeading" *ngFor="let results of result; let i=index" (click)="programSelect(results, i)">
     <span class="sideNavSubheading" [ngClass]="{'active': currentProgramIndex === i}">
-        <div>
+        <div class="overFlowHidden" matTooltip="{{results.name}}" >
             {{results.name}}
         </div>
     </span>
