--- a/src/app/core/components/program-sidenav/program-sidenav.component.scss
+++ b/src/app/core/components/program-sidenav/program-sidenav.component.scss
@@ -29,12 +29,8 @@
     align-items: center;
     padding: 0 0 0 15px;
 }
-
-
-
-
-
-
-
-
-
+.overFlowHidden{
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
