--- a/src/app/shared/components/dashboard-blocks/dashboard-blocks.component.html
+++ b/src/app/shared/components/dashboard-blocks/dashboard-blocks.component.html
@@ -1,18 +1,23 @@
-<div class="container">
-    <div class="row">
-      <div class="col-xs-12">
-          <ul class="unorder-list">
-            <li *ngFor="let operation of list" class="icons" routerLink="{{operation.anchorLink}}" [queryParams]="{programId:programId, assessmentId : assessmentId}">
-              <i class="material-icons">
-                    reorder
-                </i>
-                <div class="context">
-                  <div class="text-flow">
-                    {{operation.tooltip | translate}}
-                  </div>
-                </div>
-            </li>
-          </ul>
+
+<div class="_flex-box _justify-content-center wrapper">
+
+  <div class="_full-width ">
+    <div *ngFor="let dashBoard of list" >
+      <div class=" col-lg-3 col-md-4 col-sm-6 col-xs-12 margin-top _justify-content-center flex-box" routerLink="{{dashBoard.anchorLink}}" title="{{dashBoard.tooltip|translate}}">
+        <div class=" box iconBox">
+          <i class="material-icons folderIcon">
+            reorder
+          </i>
+        </div>
+        <div class=" box ">
+          <div class="description">
+              {{dashBoard.tooltip|translate}}
+          </div>
+          
+        </div>
       </div>
+
+
     </div>
+  </div>
 </div>
