--- a/src/app/modules/programs-dashboard/programs-dashboard.component.scss
+++ b/src/app/modules/programs-dashboard/programs-dashboard.component.scss
@@ -11,6 +11,9 @@
     height: 50px;
     background-color: transparent;
 }
+.marginTop{
+    margin : 10px 0;
+}
 .horizontalLine:after {
     content: "";
     background: lightgrey;
