--- a/src/app/modules/assessment-dashboard/assessment-dashboard.component.scss
+++ b/src/app/modules/assessment-dashboard/assessment-dashboard.component.scss
@@ -3,7 +3,19 @@
     margin: 0px;
     padding: 0px;
 }
-
+#overlay {
+    position: fixed;
+    display: hidden;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: transperent;
+    z-index: 101;
+    // cursor: pointer;
+}
 .horizontalLine {
     position: relative;
 }
