--- a/src/app/modules/operations/operations.component.html
+++ b/src/app/modules/operations/operations.component.html
@@ -1,3 +1,5 @@
-<p>
-  operations works!
-</p>
+<div class="_flex-box _justify-content-center wrapper">
+  <div class="_full-width">
+      <router-outlet></router-outlet>
+  </div>
+</div>
