--- a/src/app/modules/programs-dashboard/programs-dashboard.component.scss
+++ b/src/app/modules/programs-dashboard/programs-dashboard.component.scss
@@ -12,7 +12,7 @@
     background-color: transparent;
 }
 .marginTop{
-    margin : 10px 0;
+    margin : 10px 10px;
 }
 .horizontalLine:after {
     content: "";
