--- a/src/app/modules/operations/view-schools/view-schools.component.html
+++ b/src/app/modules/operations/view-schools/view-schools.component.html
@@ -1,9 +1,10 @@
-<div class="wrapper">
   <app-loader></app-loader>
   <div *ngIf="!error">
     <app-parent-heading [genericHeading]="headings"></app-parent-heading>
+
+
     <div *ngIf=" result > 0  && !smallScreen" class="bigTabel" (window:resize)="onResize($event)">
-      <mat-form-field [floatLabel]="'never'" class="_contentMiddle _full-width">
+      <mat-form-field [floatLabel]="'never'" class="_full-width">
         <input class="filterInput" id="search" matInput  appSearch [searchValue]="searchValue" (sendSearchValue)="searchInApi($event)" placeholder="{{'search'| translate}}" (keyup)="applyFilter($event.target.value)" >
       </mat-form-field>
       <div class="example-container mat-elevation-z8 ">
@@ -32,6 +33,9 @@
         <mat-paginator class="mat-paginator-sticky" [pageSizeOptions]="[100,50,500]" showFirstLastButtons [pageIndex]="pageIndex" [pageSize]="pageSize" [length]="length" (page)="pageEvent($event)"></mat-paginator>
       </div>
     </div>
+
+
+
     <div *ngIf=" result > 0 && smallScreen" class="_responsiveTabel" (window:resize)="onResize($event)">
       <div *ngFor="let school of schoolList" class=" margin">
         <mat-expansion-panel>
@@ -66,4 +70,3 @@
       </div>
     </div>
   </div>
-</div>
