--- a/src/assets/scss/responsive.scss
+++ b/src/assets/scss/responsive.scss
@@ -107,6 +107,12 @@
 }
 
 @media only screen and (max-width: 768px) {
+    .navbar{
+        display : none !important;
+    }
+    .responsiveNavbar{
+        display: flex !important;
+    }
     .bigTabel{
         display: none !important;
     }
