--- a/src/app/modules/assessment-dashboard/assessment-dashboard.component.scss
+++ b/src/app/modules/assessment-dashboard/assessment-dashboard.component.scss
@@ -14,7 +14,7 @@
     bottom: 0;
     background-color: transperent;
     z-index: 101;
-    // cursor: pointer;
+    //  cursor: pointer;
 }
 .horizontalLine {
     position: relative;
@@ -60,8 +60,7 @@
 }
 
 .bodyDiv {
-    height: calc(100vh - 52px) !important;
+    // height: calc(100vh - 52px) !important;
+    height: calc(100vh - 92px) !important;
+
 }
-// .padding{
-//     padding: 0px 20px;
-// }
