--- a/src/app/modules/report/school-list/school-list.component.scss
+++ b/src/app/modules/report/school-list/school-list.component.scss
@@ -37,10 +37,14 @@ table {
     justify-content: space-between;
 }
 .example-container {
-    height: calc(100vh - 160px) !important;
+    // height: calc(100vh - 160px) !important;
+    height: calc(100vh - 205px) !important;
+
   }
 .tableContainer{
-    height: calc(100vh - 216px) !important;
+    // height: calc(100vh - 216px) !important;
+    height: calc(100vh - 262px) !important;
+
     overflow: auto;
 }
 
