color added in variable.css

--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -2,7 +2,7 @@
 
 .footer{
     height:30px;
-    border-top:1px solid rgb(221, 215, 215);
+    border-top:1px solid $light-grey-color;
     background-color:#fff;
     width:100%;
     line-height: 30px;
@@ -13,8 +13,6 @@
         display:flex;
         font-size:12px;
         justify-content: center;
-        // padding:0px;
-        // margin:0px;
         li{
             display:inline-block;
             margin:5px;
