color change  in varible file

--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -3,7 +3,7 @@
 .footer{
     height:30px;
     border-top:1px solid $light-grey-color;
-    background-color:#fff;
+    background-color:$white-color;
     width:100%;
     line-height: 30px;
     .list{
