--- a/src/app/modules/programs-dashboard/programs-dashboard.component.html
+++ b/src/app/modules/programs-dashboard/programs-dashboard.component.html
@@ -13,16 +13,17 @@
                 <app-program-sidenav  [result] = "programData" (program)="setCurrentAssessment($event)"></app-program-sidenav>
               </div>
             </mat-drawer>
-           <div class="margin">
-            <mat-card *ngFor="let assessment of currentAssesssment; let i=index" class=" col-lg-3 col-md-4 col-sm-6 col-xs-12 marginTop _cursor-pointer" (click)="programClick(assessment)">
+           <!-- <div class="margin"> -->
+            <!-- <mat-card *ngFor="let assessment of currentAssesssment; let i=index" class=" col-lg-3 col-md-4 col-sm-6 col-xs-12 marginTop _cursor-pointer" (click)="programClick(assessment)">
               <mat-card-title _ngcontent-c15="" class="mat-card-title flex-box-justify-content-center">
                   <i class="material-icons iconSize" >assessment</i>
               </mat-card-title>
               <mat-card-content _ngcontent-c15="" class="docs-component-category-list-card-summary mat-card-content">
                       {{assessment?.name}}
               </mat-card-content>
-            </mat-card>
-           </div>
+            </mat-card> -->
+            <app-programsDashboard [programsList]="currentAssesssment" (emitCurrentProgram)="programClick($event)"></app-programsDashboard>
+           <!-- </div> -->
             
           </mat-drawer-container>
 
