--- a/src/app/modules/operations/operations-dashboard/select-program/select-program.component.html
+++ b/src/app/modules/operations/operations-dashboard/select-program/select-program.component.html
@@ -1,1 +1,11 @@
+<app-loader></app-loader>
+<div class="_flex-box _justify-content-space-between">
+    <div>
+         <app-parent-heading [genericHeading]="headings" [showControl]="true"></app-parent-heading>
+    </div>    
+    <div >
+                {{'message.selectPrograms'|translate}}
+    </div>
+</div>
+
 <app-programsDashboard [programsList]="programData" (emitCurrentProgram)="programClick($event)"></app-programsDashboard>
