--- a/src/app/modules/programs-dashboard/programs-dashboard.component.html
+++ b/src/app/modules/programs-dashboard/programs-dashboard.component.html
@@ -1,5 +1,6 @@
-
+<app-loader></app-loader>
 <div class="container-fluid">
+  
   <div class="row completeDiv">
       <mat-toolbar class="toolBar noMarginPadding">
           <div class="col-xs-12 ">
