resolved the conflicts

--- a/src/app/modules/assessment-dashboard/assessment-dashboard.component.html
+++ b/src/app/modules/assessment-dashboard/assessment-dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" *ngIf="baseUrl">
+<div class="container-fluid">
   <div class="row completeDiv">
       <mat-toolbar class="toolBar noMarginPadding">
           <div class="col-xs-12" >
