--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,13 +1,17 @@
 .title{
-    width: 25%;
-    height: 130px;
+    max-width: 100%;
+    width: 250px;
+    height:140px;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 380px;
-    margin-top: 220px;
+    font-size: 24px;
+    margin:22% auto;   
+    
 } 
 mat-card-title{
     transition: box-shadow 280ms cubic-bezier(.4,0,.2,1);
-    border-radius: 4px;  
+    border-radius: 5px;  
+    
+   
 }
