--- a/src/app/modules/report/entity-report/entity-report.component.html
+++ b/src/app/modules/report/entity-report/entity-report.component.html
@@ -58,7 +58,7 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 marginTop">
         <mat-card class="_flex-box _justify-content-center col-xs-12">
-          <h4>{{'headings.summary' | translate}} :-</h4>
+          <h4>{{'headings.summary' | translate}}</h4>
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 marginTop">
               <table>
                   <tr>
@@ -99,7 +99,7 @@
          
         <mat-card class="flex-direction-column col-xs-12">
            
-          <h4> {{'headings.schoolReports'| translate}} :-</h4>
+          <h4> {{'headings.schoolReports'| translate}} </h4>
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  ">
               <table>
                   <tr>
@@ -116,7 +116,7 @@
                   </tr>
                 </table>
         </div>
-          <google-chart class="marginChart"  [options]="schoolGraph.schoolOptions"  style="width : 100%; height: 100%;" 
+          <google-chart class="marginChart" [options]="schoolGraph.schoolOptions"  style="width : 100%; height: 100%;" 
           [title]="'Schools Chart'"
             [data]="schoolGraph.schoolData" [type]="schoolGraph.schoolType"
             [columnNames]="schoolGraph.schoolColumnNames">
@@ -127,7 +127,7 @@
          
         <mat-card class="flex-direction-column col-xs-12" >
 
-          <h4> {{'headings.assessorReports'| translate}} :-</h4>
+          <h4> {{'headings.assessorReports'| translate}} </h4>
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  ">
               <table>
                   <tr>
@@ -147,26 +147,17 @@
                 </table>
           </div>
           <google-chart class="marginChart" [options]="assessorGraph.assessorOptions" style="width : 100%; height: 100%;"
-            [title]="'Acessor Graph'" [data]="assessorGraph.assessorData" [type]="assessorGraph.assessorType"
+            [title]="'Acessor Graph'"  [data]="assessorGraph.assessorData" [type]="assessorGraph.assessorType"
             [columnNames]="assessorGraph.assessorColumnNames"></google-chart>
         </mat-card>
       </div>
     </div>
   </div>
 
-  <!-- <div class="paddingTop">
+ <div class="paddingTop">
     <h4> {{'headings.schoolReports'| translate}} </h4>
-    <google-chart [options]="schoolGraph.schoolOptions" [title]="'School List'" [data]="schoolGraph.schoolData"
-      [type]="schoolGraph.schoolType" [columnNames]="schoolGraph.schoolColumnNames">
+    <google-chart [title]="'Test'" [data]="myData" [roles]="myRoles"
+      [type]="myType" [columnNames]="myColumnNames" >
     </google-chart>
   </div>
 
-  <div class="paddingTop">
-    <h4> {{'headings.assessorReports'| translate}} </h4>
-
-    <google-chart [options]="assessorGraph.assessorOptions" [height]=450 [width]=1024 [title]="'Acessor Graph'"
-      [data]="assessorGraph.assessorData" [type]="assessorGraph.assessorType"
-      [columnNames]="assessorGraph.assessorColumnNames"></google-chart>
-  </div>
-
-</div> -->
