--- a/src/app/modules/assessment-dashboard/assessment-dashboard.component.html
+++ b/src/app/modules/assessment-dashboard/assessment-dashboard.component.html
@@ -3,7 +3,7 @@
       <mat-toolbar class="toolBar noMarginPadding">
           <div class="col-xs-12" >
                 <app-navbar [currentUser]="currentUser" (Logout)="onLogout()" [url]="baseUrl" [logo]="logo" ></app-navbar>
-                <app-responsive-navbar [currentUser]="currentUser" (Logout)="onLogout()" [logo]="logo" (openDrawer)="drawer.toggle()"></app-responsive-navbar>
+                <app-responsive-navbar [currentUser]="currentUser" (Logout)="onLogout()" [url]="baseUrl" [logo]="logo" (openDrawer)="drawer.toggle()"></app-responsive-navbar>
           </div>
       </mat-toolbar>
       <mat-divider class="noMarginPadding"></mat-divider>
