--- a/src/app/modules/programs-dashboard/programs-dashboard.component.html
+++ b/src/app/modules/programs-dashboard/programs-dashboard.component.html
@@ -4,7 +4,7 @@
       <mat-toolbar class="toolBar noMarginPadding">
           <div class="col-xs-12 ">
               <app-navbar [currentUser]="currentUser" (Logout)="onLogout()" [url]="baseUrl" [logo]="logo" ></app-navbar>
-              <app-responsive-navbar [currentUser]="currentUser" (Logout)="onLogout()" [logo]="logo" (openDrawer)="drawer.toggle()"></app-responsive-navbar>          </div>
+              <app-responsive-navbar [currentUser]="currentUser" (Logout)="onLogout()" [url]="baseUrl" [logo]="logo" (openDrawer)="drawer.toggle()"></app-responsive-navbar>          </div>
       </mat-toolbar>
       <mat-divider class="noMarginPadding"></mat-divider>
       <mat-drawer-container class="example-container bodyDiv" autosize>
@@ -25,6 +25,7 @@
            </div>
             
           </mat-drawer-container>
+          <app-footer></app-footer>
 
           
   </div>
