color variable added

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,6 +59,8 @@ $white-color: #fff;
 $background-color :#f2f2f2;
 $button-background-color: #e5f2fe;
 $dark-blue:#1d73f0;
+$app-blue-color:#1cdffe;
+$app-darkBlue-color:#2462e9;
 
 :root{
 --primary-color:#46a9ff;
@@ -75,6 +77,9 @@ $dark-blue:#1d73f0;
 --background-color:#f2f2f2;
 --button-background-color:: #e5f2fe;
 --dark-blue-color:#1d73f0;
+--darkBlack-color:#000;
+--app-blue-color:#1cdffe;
+--app-darkBlue-color:#2462e9;
 
 }
 body {
