--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,6 +59,8 @@ $white-color: #fff;
 $background-color :#f2f2f2;
 $button-background-color: #e5f2fe;
 $dark-blue:#1d73f0;
+$app-blue-color:#1cdffe;
+$app-darkBlue-color:#2462e9;
 
 $dark-blue:var(--dark-blue-color);
 $app-blue-color:var(--app-blue-color);
