--- a/src/assets/scss/responsive.scss
+++ b/src/assets/scss/responsive.scss
@@ -177,8 +177,14 @@
             right: 20px;
         }
 
-        
+        .dropdownDiv{
+            width:300px !important;
+            display: flex;
+        }
+
 }
+
+
 
 @media only screen and (min-width: 992px) {
 
