--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,12 +1,11 @@
 .title{
-    max-width: 100%;
-    width: 250px;
+    max-width: 300px;
     height:140px;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 24px;
-    margin:22% auto;   
+    margin:20% auto;   
     
 } 
 mat-card-title{
