--- a/src/app/modules/report/reports-dashboard/select-program/select-program.component.html
+++ b/src/app/modules/report/reports-dashboard/select-program/select-program.component.html
@@ -2,7 +2,7 @@
 <div class="flex-start">
     <div class="_flex-box _justify-content-space-between">
         <div>
-            <app-parent-heading [genericHeading]="headings" [showControl]="true"></app-parent-heading>
+                <h4>{{headings | translate}}</h4>
         </div>
         <div>
             <button mat-icon-button (click)="onChoose()" >
