added dummy type design for entity reports , breadcrumb in portal design fix of upload csv

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,7 @@
   
              
               <div class="example-sidenav-content ">
+                <!-- <breadcrumb></breadcrumb> -->
                 <router-outlet></router-outlet>
               </div>
             
