--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
     <div class="row completeDiv">
         <mat-toolbar class="toolBar noMarginPadding">
             <div class="col-xs-12 ">
-                  <app-navbar [currentUser]="currentUser" (Logout)="onLogout()" [logo]="logo" [isLoggedIn]="isLoggedIn" ></app-navbar>
-                  <app-responsive-navbar [currentUser]="currentUser" (Logout)="onLogout()" [logo]="logo" (openDrawer)="drawer.toggle()"></app-responsive-navbar>
+                  <app-navbar [currentUser]="currentUser" (Logout)="onLogout()" [logo]="logo" [isLoggedIn]="isLoggedIn" [url]="baseUrl" [portal]="portalName"></app-navbar>
+                  <app-responsive-navbar [currentUser]="currentUser" (Logout)="onLogout()" [logo]="logo" (openDrawer)="drawer.toggle()" [url]="baseUrl" [portal]="portalName"></app-responsive-navbar>
             </div>
         </mat-toolbar>
         <mat-divider class="noMarginPadding"></mat-divider>
