--- a/src/assets/scss/responsive.scss
+++ b/src/assets/scss/responsive.scss
@@ -176,6 +176,13 @@
         width: 100 !important;
             right: 20px;
         }
+
+        .dropdownDiv{
+            width:300px !important;
+            display: flex;
+        }
+
+        
 }
 
 @media only screen and (min-width: 992px) {
