--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,6 +60,10 @@ $background-color :#f2f2f2;
 $button-background-color: #e5f2fe;
 $dark-blue:#1d73f0;
 
+$dark-blue:var(--dark-blue-color);
+$app-blue-color:var(--app-blue-color);
+$app-darkBlue-color:var(--app-darkBlue-color);
+
 :root{
 --primary-color:#46a9ff;
 --black-color:#4c4c4c;
@@ -75,6 +79,9 @@ $dark-blue:#1d73f0;
 --background-color:#f2f2f2;
 --button-background-color:: #e5f2fe;
 --dark-blue-color:#1d73f0;
+--darkBlack-color:#000;
+--app-blue-color:#1cdffe;
+--app-darkBlue-color:#2462e9;
 
 }
 body {
