--- a/src/app/modules/operations/ops-report/ops-report.component.html
+++ b/src/app/modules/operations/ops-report/ops-report.component.html
@@ -79,7 +79,7 @@
                   </tr>
                 </table>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 marginTop">
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 marginTop" *ngIf="reportStatus">
             <google-chart class="marginChart" [options]="reportStatus.options" [title]="'Schools ( completed / Inporgress )'"   style="width : 100%; height: 100%;"
               [data]="reportStatus.data" [dynamicResize]="dynamicResize" [type]="reportStatus.type"
               [columnNames]="reportStatus.columnNames">
