app-container and footer fixes

--- a/src/assets/scss/responsive.scss
+++ b/src/assets/scss/responsive.scss
@@ -182,6 +182,12 @@
             display: flex;
         }
 
+        .dropdownFeature{
+           width:100% !important;
+            justify-content: center !important;
+            
+        }
+
         
 
 }
