--- a/src/app/modules/operations/ops-report/ops-report.component.html
+++ b/src/app/modules/operations/ops-report/ops-report.component.html
@@ -6,53 +6,130 @@
     <div class="_full-width">
 
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  ">
-        <mat-card class=" profileHeight col-xs-12 ">
+        <mat-card class=" profileHeight col-xs-12 " [formGroup]="filterForm" >
 
-
-          <div
-            class="col-lg-3 col-md-3 col-sm-4 col-xs-4  _flex-box _justify-content-center  userIcon ">
-            <i class="material-icons profileIcon">
-              account_circle
-            </i>
+          <div class="col-xs-12">
+              <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4  _flex-box _justify-content-center  userIcon ">
+                  <i class="material-icons profileIcon">
+                    account_circle
+                  </i>
+                </div>
+                <div class="col-lg-9 col-md-9 col-sm-8 col-xs-8   profileContent  flex-direction-column">
+                  <div class="flexBox _justify-content-center">
+                    <span>
+                      <h5>{{currentUser.name |camelcase }} .</h5>
+                    </span>
+                    <span class="_flex-box _justify-content-space-between horizontalLine flexWarp">
+                      <span class="subHeading col-xs-12 col-md-4 col-lg-4" >{{dummyObject.userRole | camelcase }} .</span>
+                      <span class="subHeading col-xs-12 col-md-4 col-lg-4"> {{currentUser.email |camelcase }} .</span>
+                      <span class="subHeading col-xs-12 col-md-4 col-lg-4">{{currentUser.preferred_username }} .</span>
+                    </span>
+      
+                  </div>
+                  <div class="_flexbox _justify-content-space-between flexWarp">
+                    <div class="flexBox _justify-content-center col-xs-12 col-md-4 col-lg-4">
+                      <span>
+                        <h6>Program Name :</h6>
+                      </span>
+                      <span>
+                        <h6 class="subHeading">{{dummyObject.programName | camelcase}}</h6>
+                      </span>
+                    </div>
+                    <div class="flexBox _justify-content-center col-xs-12 col-md-4 col-lg-4">
+                      <span>
+                          <h6>For the period :</h6>
+                      </span>
+                      <span>
+                          <h6 class="subHeading"> - NA - </h6>
+                      </span>
+                    </div>
+                    <div class="flexBox _justify-content-center col-xs-12 col-md-4 col-lg-4">
+                      <span>
+                          <h6>Date of report generation :</h6>
+                      </span>
+                      <span>
+                          <h6 class="subHeading">{{dummyObject.reportGeneratedDate }}</h6>
+                      </span>
+                    </div>
+                  </div>
+                </div>
           </div>
-          <div class="col-lg-9 col-md-9 col-sm-8 col-xs-8   profileContent  flex-direction-column">
-            <div class="flexBox _justify-content-center">
+          
+          <div class="col-xs-12">
+              <div>
+                <mat-divider></mat-divider>
+              </div>
+             <div class="flexBox _justify-content-center col-xs-12 col-md-4 col-lg-4">
               <span>
-                <h5>{{currentUser.name |camelcase }} .</h5>
-              </span>
-              <span class="_flex-box _justify-content-space-between horizontalLine flexWarp">
-                <span class="subHeading col-xs-12 col-md-4 col-lg-4" >{{dummyObject.userRole | camelcase }} .</span>
-                <span class="subHeading col-xs-12 col-md-4 col-lg-4"> {{currentUser.email |camelcase }} .</span>
-                <span class="subHeading col-xs-12 col-md-4 col-lg-4">{{currentUser.preferred_username }} .</span>
-              </span>
+                  <h6>For the period :</h6>
 
-            </div>
-            <div class="_flexbox _justify-content-space-between flexWarp">
-              <div class="flexBox _justify-content-center col-xs-12 col-md-4 col-lg-4">
+              </span>
+                <span class="subHeading col-xs-12 _noMarginPadding _flex-box">
+                    <mat-form-field class="_half-width" >
+                      <mat-label>Start Date</mat-label>
+                      <input matInput [matDatepicker]="picker1" formControlName="formDate" (dateInput)="applyDate('fromDate' , $event)" (dateChange)="applyDate('fromDate' , $event.value)"  >
+                      <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+                      <mat-datepicker #picker1></mat-datepicker>
+                    </mat-form-field>
+                    <span class="padding"> To </span>
+                    <mat-form-field  class="_half-width" >
+                      <mat-label>End Date</mat-label>
+    
+                      <input matInput [matDatepicker]="picker2"   formControlName="toDate"[max]="maxDate"  (dateInput)="applyDate('toDate' , $event.value )" (dateChange)="applyDate('toDate' , $event.value)">
+                      <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                      <mat-datepicker #picker2 color="primary"></mat-datepicker>
+                    </mat-form-field>
+                  </span>
+             </div>
+             <div class="flexBox _justify-content-center col-xs-12 col-md-8 col-lg-8">
                 <span>
-                  <h6>Program Name :</h6>
+                    <h6>Select Type :</h6>
+  
                 </span>
                 <span>
-                  <h6 class="subHeading">{{dummyObject.programName | camelcase}}</h6>
+                    <div class=" col-xs-12 col-md-6 col-lg-6 _noMarginPadding">
+                        <mat-form-field class="col-xs-12">
+                            <mat-select placeholder="School Type :-">
+                              <mat-option *ngFor="let type of filterResult.type" [value]="type.value" (click) = "selectType('type', type.value)">
+                                {{type.key}}
+                              </mat-option>
+                            </mat-select>
+                          </mat-form-field>
+                      </div>
+                      <div class="col-xs-12 col-md-6 col-lg-6 _noMarginPadding">
+                          <mat-form-field class="col-xs-12 _noMarginPadding">
+                              <mat-select placeholder="Administration :-">
+                                <mat-option *ngFor="let admin of filterResult.administration" [value]="admin.value" (click) = "selectType('administration', admin.value)">
+                                  {{admin.key}}
+                                </mat-option>
+                              </mat-select>
+                            </mat-form-field>
+                      </div>
                 </span>
+             
               </div>
-              <div class="flexBox _justify-content-center col-xs-12 col-md-4 col-lg-4">
-                <span>
-                    <h6>For the period :</h6>
-                </span>
-                <span>
-                    <h6 class="subHeading"> - NA - </h6>
-                </span>
-              </div>
-              <div class="flexBox _justify-content-center col-xs-12 col-md-4 col-lg-4">
-                <span>
-                    <h6>Date of report generation :</h6>
-                </span>
-                <span>
-                    <h6 class="subHeading">{{dummyObject.reportGeneratedDate }}</h6>
-                </span>
-              </div>
-            </div>
+              <div class="flexBox _justify-content-center col-xs-12 col-md-12 col-lg-">
+                  <span>
+                      <h6>Select Type :</h6>
+    
+                  </span>
+                  <span>
+                      <div class=" col-xs-12 col-md-4 col-lg-4 _noMarginPadding">
+                          <mat-form-field class="col-xs-12 _noMarginPadding">
+                              <input matInput placeholder="School ID" (change)="inputChange('schoolId',$event)">
+                            </mat-form-field>
+                        </div>
+                        <div class="col-xs-12 col-md-4 col-lg-4">
+                            <mat-form-field class="col-xs-12 _noMarginPadding">
+                                <input matInput placeholder="Address"(change)="inputChange('address',$event)" >
+                              </mat-form-field>
+                        </div>
+                        <div class="col-xs-12 col-md-4 col-lg-4 _flex-box _flex-end">
+                            <button mat-raised-button class="_primary-btn" [disabled]="!filterForm.valid" >Generate Report</button>
+                        </div>
+                  </span>
+                </div>
+                
           </div>
         </mat-card>
       </div>
