--- a/src/app/modules/operations/ops-report/ops-report.component.scss
+++ b/src/app/modules/operations/ops-report/ops-report.component.scss
@@ -5,6 +5,9 @@
     padding:0 0 20px 0;
 
 }
+.padding{
+    padding: 0 20px 0 20px ;
+}
 .marginTop{
     margin: 20px 0 ;
 }
@@ -16,6 +19,8 @@
     padding: 0px;
     display: flex;
     align-items: center;
+    flex-direction: column;
+
 }
 .profileIcon{
     font-size: 10vw;
