pagination and filter added to ops reports

--- a/src/app/modules/operations/view-assessors/view-assessors.component.html
+++ b/src/app/modules/operations/view-assessors/view-assessors.component.html
@@ -3,7 +3,7 @@
       <app-parent-heading [genericHeading]="headings"></app-parent-heading>
       <div *ngIf=" result > 0  && !smallScreen" class="bigTabel" (window:resize)="onResize($event)">
         <mat-form-field [floatLabel]="'never'" class=" _full-width">
-          <input class="filterInput" id="search" matInput  appSearch [searchValue]="searchValue" (sendSearchValue)="searchInApi($event)" placeholder="{{'search'| translate}}" (keyup)="applyFilter($event.target.value)" >
+          <input class="filterInput" id="search" matInput  appDebounceSearch [searchValue]="searchValue" (debounceSearch)="searchInApi($event)" placeholder="{{'search'| translate}}" (keyup)="applyFilter($event.target.value)" >
         </mat-form-field>
         <div class="example-container mat-elevation-z8 ">
           <div class="tableContainer">
