--- a/src/app/modules/operations/ops-report/ops-report.component.html
+++ b/src/app/modules/operations/ops-report/ops-report.component.html
@@ -67,7 +67,7 @@
                 <span class="subHeading col-xs-12 _noMarginPadding _flex-box">
                     <mat-form-field class="_half-width" >
                       <mat-label>Start Date</mat-label>
-                      <input matInput [matDatepicker]="picker1" formControlName="formDate" (dateInput)="applyDate('fromDate' , $event)" (dateChange)="applyDate('fromDate' , $event.value)"  >
+                      <input matInput [matDatepicker]="picker1" formControlName="formDate" [max]="maxDate"  (dateInput)="applyDate('fromDate' , $event)" (dateChange)="applyDate('fromDate' , $event.value)" required >
                       <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
                       <mat-datepicker #picker1></mat-datepicker>
                     </mat-form-field>
@@ -75,7 +75,7 @@
                     <mat-form-field  class="_half-width" >
                       <mat-label>End Date</mat-label>
     
-                      <input matInput [matDatepicker]="picker2"   formControlName="toDate"[max]="maxDate"  (dateInput)="applyDate('toDate' , $event.value )" (dateChange)="applyDate('toDate' , $event.value)">
+                      <input matInput [matDatepicker]="picker2"  [disabled]="!filterForm.controls.formDate.valid" formControlName="toDate"[max]="maxDate" [min]="filterForm.controls.formDate.value" (dateInput)="applyDate('toDate' , $event.value )" (dateChange)="applyDate('toDate' , $event.value)" required>
                       <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
                       <mat-datepicker #picker2 color="primary"></mat-datepicker>
                     </mat-form-field>
@@ -116,7 +116,12 @@
                   <span>
                       <div class=" col-xs-12 col-md-4 col-lg-4 _noMarginPadding">
                           <mat-form-field class="col-xs-12 _noMarginPadding">
-                              <input matInput placeholder="School ID" (change)="inputChange('schoolId',$event)">
+                              <input matInput placeholder="School ID" (keyup)="inputChange('schoolId',$event)" [matAutocomplete]="auto" appDebounceSearch (debounceSearch)="searchSchoolIdInApi($event)" [searchValue]="searchSchoolId">
+                              <mat-autocomplete #auto="matAutocomplete">
+                                  <mat-option *ngFor="let option of options" [value]="option.id">
+                                    {{option.id}} - {{option.name}}
+                                  </mat-option>
+                                </mat-autocomplete>
                             </mat-form-field>
                         </div>
                         <div class="col-xs-12 col-md-4 col-lg-4">
@@ -125,7 +130,7 @@
                               </mat-form-field>
                         </div>
                         <div class="col-xs-12 col-md-4 col-lg-4 _flex-box _flex-end">
-                            <button mat-raised-button class="_primary-btn" [disabled]="!filterForm.valid" >Generate Report</button>
+                            <button mat-raised-button class="_primary-btn" [disabled]="!filterForm.valid" (click)="generateReport()" >Generate Report</button>
                         </div>
                   </span>
                 </div>
@@ -133,7 +138,7 @@
           </div>
         </mat-card>
       </div>
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 marginTop">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 marginTop" *ngIf="reportGenerate">
         <mat-card class="_flex-box _justify-content-center col-xs-12">
           <h4>{{'headings.summary' | translate}} :-</h4>
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 marginTop">
@@ -172,7 +177,7 @@
           </div>
         </mat-card>
       </div>
-      <div class="col-lg-12 col-md-22 col-sm-12 col-xs-12 marginTop ">
+      <div class="col-lg-12 col-md-22 col-sm-12 col-xs-12 marginTop "  *ngIf="reportGenerate">
          
         <mat-card class="flex-direction-column col-xs-12">
            
@@ -192,6 +197,8 @@
                     <td>{{school.assessmentCompletedInPercent}}</td>
                   </tr>
                 </table>
+                <app-pagination [length] = "100" [itemsPerPage]="[3,5,7,10]" (paginationResponse)="pageResponse($event)" [paginationLabel]="'school'"></app-pagination>
+
         </div>
           <google-chart class="marginChart"  [options]="schoolGraph.schoolOptions"  style="width : 100%; height: 100%;" 
           [title]="'Schools Chart'"
@@ -200,7 +207,7 @@
           </google-chart>
         </mat-card>
       </div>
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 marginTop ">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 marginTop "  *ngIf="reportGenerate">
          
         <mat-card class="flex-direction-column col-xs-12" >
 
