--- a/src/app/modules/operations/view-schools/view-schools.component.html
+++ b/src/app/modules/operations/view-schools/view-schools.component.html
@@ -5,7 +5,7 @@
 
     <div *ngIf=" result > 0  && !smallScreen" class="bigTabel" (window:resize)="onResize($event)">
       <mat-form-field [floatLabel]="'never'" class="_full-width">
-        <input class="filterInput" id="search" matInput  appSearch [searchValue]="searchValue" (sendSearchValue)="searchInApi($event)" placeholder="{{'search'| translate}}" (keyup)="applyFilter($event.target.value)" >
+        <input class="filterInput"  matInput  appDebounceSearch [searchValue]="searchValue" (debounceSearch)="searchInApi($event)" placeholder="{{'search'| translate}}" (keyup)="applyFilter($event.target.value)" >
       </mat-form-field>
       <div class="example-container mat-elevation-z8 ">
         <div class="tableContainer">
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-
+    <!-- <app-pagination [length] = "113" [itemsPerPage]="[5,7,10]" (paginationResponse)="pageResponse($event)"></app-pagination> -->
 
     <div *ngIf=" result > 0 && smallScreen" class="_responsiveTabel" (window:resize)="onResize($event)">
       <div *ngFor="let school of schoolList" class=" margin">
