--- a/src/app/modules/operations/ops-report/ops-report.component.scss
+++ b/src/app/modules/operations/ops-report/ops-report.component.scss
@@ -96,16 +96,16 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
     width: 100%;
-    border: 1px solid #ddd;
+    border: 1px solid var(--border-color);
   }
   
   th, td {
     text-align: left;
-    padding: 16px;
+    padding: 10px;
   }
   
   tr:nth-child(even) {
-    background-color: #f2f2f2
+    background-color: var(--background-color);
   }
   .marginChart{
       margin :50px 0 50px 0 ;
