--- a/src/app/modules/report/entity-report/entity-report.component.html
+++ b/src/app/modules/report/entity-report/entity-report.component.html
@@ -1,163 +1,36 @@
+<app-loader></app-loader>
+
 <app-parent-heading [genericHeading]="headings" [showControl]="false"></app-parent-heading>
-<div class="reportDashboard">
 
-  <div class="_flex-box _justify-content-center ">
-
-    <div class="_full-width">
-
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  ">
-        <mat-card class=" profileHeight col-xs-12 ">
-
-
-          <div
-            class="col-lg-3 col-md-3 col-sm-4 col-xs-4  _flex-box _justify-content-center  userIcon ">
-            <i class="material-icons profileIcon">
-              account_circle
-            </i>
-          </div>
-          <div class="col-lg-9 col-md-9 col-sm-8 col-xs-8   profileContent  flex-direction-column">
-            <div class="flexBox _justify-content-center">
-              <span>
-                <h5>{{currentUser.name |camelcase }} .</h5>
-              </span>
-              <span class="_flex-box _justify-content-space-between horizontalLine flexWarp">
-                <span class="subHeading col-xs-12 col-md-4 col-lg-4" >{{dummyObject.userRole | camelcase }} .</span>
-                <span class="subHeading col-xs-12 col-md-4 col-lg-4"> {{currentUser.email |camelcase }} .</span>
-                <span class="subHeading col-xs-12 col-md-4 col-lg-4">{{currentUser.preferred_username }} .</span>
-              </span>
-
-            </div>
-            <div class="_flexbox _justify-content-space-between flexWarp">
-              <div class="flexBox _justify-content-center col-xs-12 col-md-4 col-lg-4">
-                <span>
-                  <h6>Program Name :</h6>
-                </span>
-                <span>
-                  <h6 class="subHeading">{{dummyObject.programName | camelcase}}</h6>
-                </span>
-              </div>
-              <div class="flexBox _justify-content-center col-xs-12 col-md-4 col-lg-4">
-                <span>
-                    <h6>For the period :</h6>
-                </span>
-                <span>
-                    <h6 class="subHeading"> - NA - </h6>
-                </span>
-              </div>
-              <div class="flexBox _justify-content-center col-xs-12 col-md-4 col-lg-4">
-                <span>
-                    <h6>Date of report generation :</h6>
-                </span>
-                <span>
-                    <h6 class="subHeading">{{dummyObject.reportGeneratedDate }}</h6>
-                </span>
-              </div>
-            </div>
-          </div>
-        </mat-card>
-      </div>
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 marginTop">
-        <mat-card class="_flex-box _justify-content-center col-xs-12">
-          <h4>{{'headings.summary' | translate}}</h4>
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 marginTop">
-              <table>
-                  <tr>
-                    <td>Total Schools Assigned :</td>
-                    <td>{{dummyObject.schoolsAssigned}}</td>
-                  </tr>
-                  <tr>
-                    <td>Schools in progress :</td>
-                    <td>{{dummyObject.schoolsInporgress}}</td>
-                  </tr>
-                  <tr>
-                    <td>Schools completed :</td>
-                    <td>{{dummyObject.schoolsCompleted}}</td>
-                  </tr>
-                  <tr>
-                    <td>Average Time Taken for each school :</td>
-                    <td>{{dummyObject.averageTimeTakenForSchools}}</td>
-                  </tr>
-                </table>
-          </div>
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 marginTop" *ngIf="reportStatus">
-            <google-chart class="marginChart" [options]="reportStatus.options" [title]="'Schools ( completed / Inporgress )'"   style="width : 100%; height: 100%;"
-              [data]="reportStatus.data" [dynamicResize]="dynamicResize" [type]="reportStatus.type"
-              [columnNames]="reportStatus.columnNames">
-            </google-chart>
-            <!-- <div class="_flex-box _justify-content-center">
-              <span>Total School Assigned : </span>
-              <span>{{dummyObject.schoolsAssigned}} .</span>
-            </div>
-            <div class="_flex-box _justify-content-center">
-              <span>Average time taken : </span>
-              <span>{{dummyObject.averageTimeTakenForSchools}} .</span>
-            </div> -->
-          </div>
-        </mat-card>
-      </div>
-      <div class="col-lg-12 col-md-22 col-sm-12 col-xs-12 marginTop ">
-         
-        <mat-card class="flex-direction-column col-xs-12">
-           
-          <h4> {{'headings.schoolReports'| translate}} </h4>
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  ">
-              <table>
-                  <tr>
-                      <th>School Name</th>
-                      <th>School Status</th>
-                      <th> Days elapsed since assessment started</th>
-                      <th>% completion of assessment</th>
-                  </tr>
-                  <tr *ngFor="let school of dummyObject.schoolsReport">
-                    <td>{{school.schoolName}}</td>
-                    <td>{{school.status}}</td>
-                    <td>{{school.daysElapsed}}</td>
-                    <td>{{school.assessmentCompletedInPercent}}</td>
-                  </tr>
-                </table>
-        </div>
-          <google-chart class="marginChart" [options]="schoolGraph.schoolOptions"  style="width : 100%; height: 100%;" 
-          [title]="'Schools Chart'"
-            [data]="schoolGraph.schoolData" [type]="schoolGraph.schoolType"
-            [columnNames]="schoolGraph.schoolColumnNames">
-          </google-chart>
-        </mat-card>
-      </div>
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 marginTop ">
-         
-        <mat-card class="flex-direction-column col-xs-12" >
-
-          <h4> {{'headings.assessorReports'| translate}} </h4>
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  ">
-              <table>
-                  <tr>
-                      <th>Lead Assessor Name</th>
-                      <th>Number of schools assigned</th>
-                      <th> Number of schools Completed</th>
-                      <th> % of schools completed</th>
-                      <th>Average days taken for school assessment</th>
-                    </tr>
-                  <tr *ngFor="let asessor of dummyObject.assessorsReport">
-                    <td>{{asessor.name}}</td>
-                    <td>{{asessor.schoolsAssigned}}</td>
-                    <td>{{asessor.schoolsCompleted}}</td>
-                    <td>{{asessor.schoolCompletedInPercent}}</td>
-                    <td>{{asessor.averageDaysTaken}}</td>
-                  </tr>
-                </table>
-          </div>
-          <google-chart class="marginChart" [options]="assessorGraph.assessorOptions" style="width : 100%; height: 100%;"
-            [title]="'Acessor Graph'"  [data]="assessorGraph.assessorData" [type]="assessorGraph.assessorType"
-            [columnNames]="assessorGraph.assessorColumnNames"></google-chart>
-        </mat-card>
-      </div>
+  <div *ngIf="entityResult"  >
+    <div class="col-xs-12">
+        <h3>{{summary.schoolName}}</h3>
+        <h6>Date of Assignment :-  {{summary.generatedAt}}</h6>
     </div>
-  </div>
+   
+    <span class="col-xs-12 marginTop" *ngFor="let chart of entityResult">
+        <mat-card *ngIf="chart.reportType === 'tableGraph'">
 
- <div class="paddingTop">
-    <h4> {{'headings.schoolReports'| translate}} </h4>
-    <google-chart [title]="'Test'" [data]="myData" [roles]="myRoles"
-      [type]="myType" [columnNames]="myColumnNames" >
-    </google-chart>
-  </div>
+            <table>
+                <tr>
+                  <th>{{chart.keydomainName}}</th>
+                  <th>{{chart.tabularData.valueColumn}}</th>
+                  
+                </tr>
+                <tr *ngFor="let tableData of chart.tabularData.data">
+                  <td>{{tableData.domainName}}</td>
+                  <td>{{tableData.value}}</td>
+                </tr>
+              </table>
 
+            <google-chart  (ready)="onReady()" class="marginChart" [options]="chart.graphData.chartOptions"  style="width : 100%; height: 500px;" 
+            [title]="'Schools Chart'"
+              [data]="chart.graphData.data" [type]="chart.graphData.chartType"
+              [columnNames]="chart.graphData.columnName">
+            </google-chart>
+      
+        </mat-card>
+    </span>
+   
+
+  </div>
