--- a/src/app/modules/operations/ops-report/ops-report.component.html
+++ b/src/app/modules/operations/ops-report/ops-report.component.html
@@ -8,7 +8,7 @@
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  ">
         <mat-card class=" profileHeight col-xs-12 " [formGroup]="filterForm">
 
-          <div class="col-xs-12">
+          <div class="col-xs-12 _flex-box">
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4  _flex-box _justify-content-center  userIcon ">
               <i class="material-icons profileIcon">
                 account_circle
@@ -54,8 +54,7 @@
               </div>
             </div>
           </div>
-
-          <div class="col-xs-12 _noMarginPadding">
+          <!-- <div class="col-xs-12 _noMarginPadding">
             <div>
               <mat-divider></mat-divider>
             </div>
@@ -122,8 +121,62 @@
               </div>
             </div>
 
-          </div>
+          </div> -->
         </mat-card>
+        <div class="col-xs-12 _noMarginPadding">
+          <mat-accordion class="example-headers-align ">
+ 
+            <mat-expansion-panel  class="marginTop"  hideToggle>
+              <mat-expansion-panel-header>
+                <mat-expansion-panel-header >
+                <mat-chip> Filters : {{filterArray?.length |blank }} </mat-chip>
+              </mat-expansion-panel-header>
+              </mat-expansion-panel-header>
+          
+              <!-- <mat-form-field> -->
+                <mat-chip-list #chipList>
+              <mat-chip *ngFor="let filter of filterArray" [selectable]="selectable"
+                       [removable]="removable" (removed)="remove(filter)">
+                {{filter[0]}} : {{filter[1]}}
+                <!-- <i class="material-icons" matChipRemove *ngIf="removable">
+                  close
+              </i> -->
+                <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+              </mat-chip>
+              <!-- <input placeholder="Filters"
+                     [matChipInputFor]="chipList"
+                     [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                     [matChipInputAddOnBlur]="addOnBlur"
+                     (matChipInputTokenEnd)="add($event)"> -->
+            </mat-chip-list>
+              <!-- </mat-form-field> -->
+              <!-- <mat-form-field>
+          
+                <input matInput placeholder="Date" [matDatepicker]="picker" (focus)="picker.open()" readonly>
+              </mat-form-field>
+              <mat-datepicker #picker></mat-datepicker> -->
+              <app-dynamic-form [genericData]="filterData" [genericForm]="filterForm" [genericEdit]="true"></app-dynamic-form>
+
+              <mat-action-row>
+                <button mat-raised-button color="warn" (click)="filterForm.reset()">reset</button>
+                <button mat-raised-button color="primary" (click)="nextStep()" [disabled]="!filterForm.valid">apply</button>
+              </mat-action-row>
+            </mat-expansion-panel>
+          
+          </mat-accordion>
+        </div>
+       
+        
+        
+        <!-- Copyright 2019 Google Inc. All Rights Reserved.
+            Use of this source code is governed by an MIT-style license that
+            can be found in the LICENSE file at http://angular.io/license -->
+
+
+
+
+
+
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 marginTop" *ngIf="reportGenerate">
         <mat-card class="_flex-box _justify-content-center col-xs-12">
