--- a/src/app/modules/operations/ops-report/ops-report.component.html
+++ b/src/app/modules/operations/ops-report/ops-report.component.html
@@ -1,3 +1,4 @@
+<app-loader></app-loader>
 <app-parent-heading [genericHeading]="headings" [showControl]="false"></app-parent-heading>
 <div class="reportDashboard">
 
@@ -6,7 +7,7 @@
     <div class="_full-width">
 
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  ">
-        <!-- <mat-card class=" profileHeight col-xs-12 " [formGroup]="filterForm">
+        <mat-card class=" profileHeight col-xs-12 " [formGroup]="filterForm" *ngIf="summaryData">
 
           <div class="col-xs-12 _flex-box">
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4  _flex-box _justify-content-center  userIcon ">
@@ -17,22 +18,22 @@
             <div class="col-lg-9 col-md-9 col-sm-8 col-xs-8   profileContent  flex-direction-column">
               <div class="flexBox _justify-content-center">
                 <span>
-                  <h5>{{currentUser.name |camelcase }} .</h5>
+                  <h5>{{summaryData.managerName.value |camelcase }} .</h5>
                 </span>
                 <span class="_flex-box _justify-content-space-between horizontalLine flexWarp">
-                  <span class="subHeading col-xs-12 col-md-4 col-lg-4">{{dummyObject.userRole | camelcase }} .</span>
-                  <span class="subHeading col-xs-12 col-md-4 col-lg-4"> {{currentUser.email |camelcase }} .</span>
-                  <span class="subHeading col-xs-12 col-md-4 col-lg-4">{{currentUser.preferred_username }} .</span>
+                  <span class="subHeading col-xs-12 col-md-4 col-lg-4">{{summaryData.role.value | camelcase }} .</span>
+                  <span class="subHeading col-xs-12 col-md-4 col-lg-4"> {{summaryData.email.value  }} .</span>
+                  <span class="subHeading col-xs-12 col-md-4 col-lg-4">{{summaryData.userName.value }} .</span>
                 </span>
 
               </div>
               <div class="_flexbox _justify-content-space-between flexWarp">
                 <div class="flexBox _justify-content-center col-xs-12 col-md-4 col-lg-4">
                   <span>
-                    <h6>Program Name :</h6>
+                    <h6>{{summaryData.programName.label | camelcase}}</h6>
                   </span>
                   <span>
-                    <h6 class="subHeading">{{dummyObject.programName | camelcase}}</h6>
+                    <h6 class="subHeading">{{summaryData.programName.value | camelcase}}</h6>
                   </span>
                 </div>
                 <div class="flexBox _justify-content-center col-xs-12 col-md-4 col-lg-4">
@@ -45,30 +46,37 @@
                 </div>
                 <div class="flexBox _justify-content-center col-xs-12 col-md-4 col-lg-4">
                   <span>
-                    <h6>Date of report generation :</h6>
+                    <h6>{{summaryData.createdDate.label | camelcase}}:</h6>
                   </span>
                   <span>
-                    <h6 class="subHeading">{{dummyObject.reportGeneratedDate }}</h6>
+                    <h6 class="subHeading">{{summaryData.createdDate.value}}</h6>
                   </span>
                 </div>
               </div>
             </div>
           </div>
 
-        </mat-card> -->
+        </mat-card> 
         <div class="col-xs-12 _noMarginPadding">
           <mat-accordion class="example-headers-align ">
 
-            <mat-expansion-panel class="marginTop" hideToggle>
+            <mat-expansion-panel class="marginTop" hideToggle [expanded]="true">
               <mat-expansion-panel-header>
                 <mat-expansion-panel-header>
-                  Filters :-
-                  <mat-chip> Filters : {{filterArray?.length |blank }} </mat-chip>
+                 <span  class="_flex-box">{{'headings.filters' | translate}} :-
+                  <span class="_padding-left" >
+                  <mat-chip *ngIf=" filterArray?.length"> {{filterArray?.length }} </mat-chip>
+                  <mat-chip *ngIf="! filterArray?.length"> 0 </mat-chip>
+                  </span>
+                  </span>
                 </mat-expansion-panel-header>
               </mat-expansion-panel-header>
 
               <mat-chip-list #chipList>
-                <mat-chip *ngFor="let filter of filterArray" [selectable]="selectable" [removable]="removable"
+                <!-- <mat-chip *ngFor="let filter of filterArray" [selectable]="selectable"
+                 >
+                  {{filter[0]}} : {{filter[1]}} -->
+                  <mat-chip *ngFor="let filter of filterArray" [selectable]="selectable" [removable]="removable"
                   (removed)="remove(filter)">
                   {{filter[0]}} : {{filter[1]}}
                   <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
@@ -80,49 +88,52 @@
               </app-dynamic-form>
 
               <mat-action-row>
-                <button mat-raised-button color="warn" (click)="filterForm.reset()">reset</button>
-                <button mat-raised-button color="primary" (click)="nextStep()"
-                  [disabled]="!filterForm.valid">apply</button>
+                <button mat-raised-button color="warn"  (click)="filterApply('reset')">{{'buttons.reset'|translate}}</button>
+                <button mat-raised-button color="primary" (click)="filterApply('apply')"  class="_margin-left"
+                  [disabled]="!filterForm.valid">{{'buttons.apply'|translate}}</button>
               </mat-action-row>
             </mat-expansion-panel>
           </mat-accordion>
         </div>
       </div>
-      <!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 marginTop" *ngIf="reportGenerate">
-        <mat-card class="_flex-box _justify-content-center col-xs-12">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 marginTop" *ngIf="reportGenerate && summaryData">
+        <mat-card class="_flex-box _justify-content-center col-xs-12" >
           <h4>{{'headings.summary' | translate}} :-</h4>
+          <div class="_flex-box">
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 marginTop">
             <table>
               <tr>
-                <td>Total Schools Assigned :</td>
-                <td>{{dummyObject.schoolsAssigned}}</td>
+                <td>{{summaryData.schoolsAssigned.label | camelcase}}</td>
+                <td>{{summaryData.schoolsAssigned.value}}</td>
               </tr>
               <tr>
-                <td>Schools in progress :</td>
-                <td>{{dummyObject.schoolsInporgress}}</td>
+                <td>{{summaryData.schoolsCompleted.label | camelcase}}</td>
+                <td>{{summaryData.schoolsCompleted.value}}</td>
               </tr>
               <tr>
-                <td>Schools completed :</td>
-                <td>{{dummyObject.schoolsCompleted}}</td>
+                <td>{{summaryData.schoolsInporgress.label | camelcase}}</td>
+                <td>{{summaryData.schoolsInporgress.value}}</td>
               </tr>
               <tr>
-                <td>Average Time Taken for each school :</td>
-                <td>{{dummyObject.averageTimeTakenForSchools}}</td>
+                <td>{{summaryData.averageTimeTaken.label | camelcase}}</td>
+                <td>{{summaryData.averageTimeTaken.value}}</td>
               </tr>
             </table>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 marginTop" *ngIf="reportStatus">
-            <google-chart class="marginChart" [options]="reportStatus.options"
-              [title]="'Schools ( completed / Inporgress )'" style="width : 100%; height: 100%;"
-              [data]="reportStatus.data" [dynamicResize]="dynamicResize" [type]="reportStatus.type"
-              [columnNames]="reportStatus.columnNames">
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 marginTop" *ngIf="summaryGraph">
+            <google-chart class="marginChart" [options]="summaryGraph.chartOptions"
+              [title]="summaryGraph.title" style="width : 100%; height: 100%;"
+              [data]="summaryGraph.data" [type]="summaryGraph.chartType"
+              [columnNames]="summaryGraph.chartColumnNames">
             </google-chart>
-           
           </div>
+        </div>
         </mat-card>
-      </div> -->
-      <div class="col-lg-12 col-md-22 col-sm-12 col-xs-12 marginTop " *ngIf="schoolGraph">
-        <mat-card class="flex-direction-column col-xs-12">
+      </div>
+      <div class="col-lg-12 col-md-22 col-sm-12 col-xs-12 marginTop " *ngIf="reportGenerate && schoolReport">
+        <div *ngFor="let schoolGraph of schoolReport">
+        <mat-card class="flex-direction-column col-xs-12" *ngIf="schoolGraph.data.length > 0">
+         
           <h4> {{'headings.schoolReports'| translate}} :-</h4>
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  ">
             <mat-form-field [floatLabel]="'never'" class=" _full-width">
@@ -132,25 +143,27 @@
             </mat-form-field>
             <table>
               <tr >
-                <th *ngFor="let heading of schoolReport.tabularData.headers">{{heading.label}}</th>
+                <th *ngFor="let heading of schoolGraph.tabularData.headers">{{heading.label}}</th>
               </tr>
-              <tr *ngFor="let school of schoolReport.data">
-                <td *ngFor="let heading of schoolReport.tableHeader">{{school[heading]}}</td>
+              <tr *ngFor="let school of schoolGraph.data">
+                <td *ngFor="let heading of schoolGraph.tableHeader">{{school[heading]}}</td>
               </tr>
             </table>
           </div>
-          <div *ngFor="let Chart of schoolGraph">
+          <div *ngFor="let Chart of schoolGraph.graphData">
             <google-chart class="marginChart" [options]="Chart.chartOptions" style="width : 100%; height: 100%;"
             [title]="Chart.title" [data]="Chart.data" [type]="Chart.chartType"
             [columnNames]="Chart.columnNames">
           </google-chart>
           </div>
-          <app-pagination [length]="schoolReport.totalCount" [itemsPerPage]="itemsPerPage" (paginationResponse)="pageResponse($event)"
+          <app-pagination [length]="schoolGraph.totalCount" [pageLimit]="pageLimit" [pageIndex]="pageIndex" [itemsPerPage]="itemsPerPage" (paginationResponse)="pageResponse($event)"
               [paginationLabel]="'school'"></app-pagination>
-        </mat-card>
+              </mat-card>
+            </div>
       </div> 
-      <div class="col-lg-12 col-md-22 col-sm-12 col-xs-12 marginTop" *ngIf="assessorGraph">
-          <mat-card class="flex-direction-column col-xs-12">
+      <div class="col-lg-12 col-md-22 col-sm-12 col-xs-12 marginTop" *ngIf=" reportGenerate && assessorReport">
+        <div *ngFor ="let assessorGraph of assessorReport">
+          <mat-card class="flex-direction-column col-xs-12" *ngIf="assessorGraph.data.length > 0">
             <h4> {{'headings.assessorReports'| translate}} :-</h4>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  ">
               <mat-form-field [floatLabel]="'never'" class=" _full-width">
@@ -160,22 +173,23 @@
               </mat-form-field>
               <table>
                 <tr >
-                  <th *ngFor="let heading of assessorReport.tabularData.headers">{{heading.label}}</th>
+                  <th *ngFor="let heading of assessorGraph.tabularData.headers">{{heading.label}}</th>
                 </tr>
-                <tr *ngFor="let assessor of assessorReport.data">
-                  <td *ngFor="let heading of assessorReport.tableHeader">{{assessor[heading]}}</td>
+                <tr *ngFor="let assessor of assessorGraph.data">
+                  <td *ngFor="let heading of assessorGraph.tableHeader">{{assessor[heading]}}</td>
                 </tr>
               </table>
             </div>
-            <div *ngFor="let Chart of assessorGraph">
+            <div *ngFor="let Chart of assessorGraph.graphData">
               <google-chart class="marginChart" [options]="Chart.chartOptions" style="width : 100%; height: 100%;"
               [title]="Chart.title" [data]="Chart.data" [type]="Chart.chartType"
               [columnNames]="Chart.columnNames">
             </google-chart>
             </div>
-            <app-pagination [length]="assessorReport.totalCount" [itemsPerPage]="itemsPerPage" (paginationResponse)="pageResponse($event)"
+            <app-pagination [length]="assessorGraph.totalCount" [pageLimit]="pageLimit" [itemsPerPage]="itemsPerPage" (paginationResponse)="pageResponse($event)"
                 [paginationLabel]="'school'"></app-pagination>
           </mat-card>
+          </div>
         </div> 
     </div>
   </div>
